kubernetes/cert-manager/components/network-policy/base/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: cert-manager
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: certificate-manager
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-communication
  namespace: cert-manager
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: certificate-manager
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cert-manager
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cert-manager
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cloudflare-egress
  namespace: cert-manager
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: certificate-manager
spec:
  policyTypes:
    - Egress
  podSelector: {}
  egress:
    - to:
        # - ipBlock:
        #     cidr: 0.0.0.0/0
        #     except:
        #       - 10.0.0.0/8
        #       - 172.16.0.0/12
        #       - 192.168.0.0/16
        # CloudFlare API IP Ranges
        # https://www.cloudflare.com/ips/
        - ipBlock:
            cidr: 104.16.0.0/13
        - ipBlock:
            cidr: 172.64.0.0/13
